# reference

./: README.md
api-requests/: pyproject.toml
api-requests/api_requests/: examples.py  hello.py
async/: README.md  pyproject.toml
async/async/: concurrency_asyncio.py  threading_deadlock_example.py  threading_queue_to_avoid_deadlocks.py
fastapi/: README.md  auth_example.py  get_and_post.py  main.py  pyproject.toml
new_python_repo/: README.md  example_pre-commit_config.yaml  logging.sh  setup.sh
terraform/: .gitignore  README.md
terraform/learn-terraform-aws-instance/: main.tf
terraform/learn-terraform-docker-container/: README.md  main.tf
